--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "51230-clase-31-tdd",
   "version": "1.0.0",
   "description": "",
-  "main": "src/suma.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
     "test": "node test/suma.test.manual.js",
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "express": "^4.18.2"
+  }
 }
